version 0.09.3 (TBA):
	* Remove stale code (apply() function).
	* Patch from Danny Milosavljevic (thanks!) which fixes:
	* "tilda -C", then Cancel quits app now
	* wizard is a gtk dialog now (modal, not sure if it's used in other
	  places than the -C command line arg)
	* wizard uses stock buttons now
	* fixed the command line in the wizard to take command line arguments
	  as well
	* fixed the restart handling in close_tab_on_exit (combo entry order
	  changed, but the switch statement contained the old order - it seems)
	* fixed a strlen warning in tilda_window.c
	* removed the apply button since it was confusing

version 0.09.2 (2006-1-21):
	* Added libConfuse to configure.in.
	* Better command-line option help generation.
	* Switch to libConfuse for config-file parsing.
	* Internal cleanups / documentation.
	* Increase use of GLib.
	* Sliding action added
	* No more blinking terminal
	* Added shortcuts for adding tabs and going to the next or prev tab
	* Various bug fixes

version 0.09.1 (2005-10-4):
	* Fixed problem of tab taking other tabs title
	* Fixed 100% CPU problem when Tilda is started hidden

version 0.09 (2005-10-3):
	* Added Dynamic tab titles
	* Added lots of added preferences to Tilda Wizard (too many to name here)
	* Window Maker bug fix
	* Possible fix to Tilda not grabbing focus on pull down
	* Cleaned up the autotools build stuff. There were some directories that
	  should have never gotten into CVS. Run autogen.sh to set up the build now.

version 0.08.1 (2005-08-18):
	* Fixed a bug where the scrollbar would not show up on new tabs.
	* Fixed a bug where all new tabs in the same instance did not take on the
	  same properties as their parent.
	* Fixed some GCC4 compile warnings. Thanks to Daniel Holbach for pointing
	  them out!
	* Minor code cleanups.
	* Misc bugfixes.

version 0.08 (2005-07-31):
	* Tabs have been added -- right cick on the tilda window to add or remove
	  a tab.
	* May have fixed some focus issues.